# tomtom-apis-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pr_body.md  pyproject.toml  pyprojtoml.txt  sonar-project.properties
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/actions/setup-app/: action.yaml
.github/actions/setup-env/: action.yaml
.github/workflows/: ci.yaml  codeql.yaml  license.yaml  poetry_update.yaml  pr.yaml  release-drafter.yaml  release.yaml  update_dependecies.yaml  update_fixtures.yaml
examples/: README.md
examples/maps/: maps.py
examples/maps_london_traffic/: README.md  download_tiles.py
examples/places/: geocoding.py  places.py  reverse_geocoding.py  search.py
examples/routing_landmarks/: routing.py
examples/routing_monaco_gp/: README.md  monaco.py
scripts/: checks.sh  local_ci_checks.sh  setup_env.sh  sort_models.py  update_test_fixtures.py
scripts/data/: fixtures.json
src/tomtom_api/: __init__.py  api.py  const.py  models.py  utils.py
src/tomtom_api/automotive/: __init__.py  autostream.py  fuel_prices.py  models.py  parking_availability.py
src/tomtom_api/maps/: __init__.py  map_display.py  models.py
src/tomtom_api/places/: __init__.py  batch_search.py  ev_search.py  geocoding.py  models.py  premium_geocoding.py  reverse_geocoding.py  search.py
src/tomtom_api/routing/: __init__.py  long_distance_ev_routing.py  matrix_routing_v2.py  models.py  routing.py  waypoint_optimization.py
src/tomtom_api/tracking_logistics/: __init__.py  geofencing.py  location_history.py  notifications.py  snap_to_roads.py
src/tomtom_api/traffic/: __init__.py  intermediate_traffic.py  junction_analytics.py  models.py  od_analytics.py  route_monitoring.py  traffic.py  traffic_stats.py
src/tomtom_apis/: __init__.py  api.py  const.py  exceptions.py  models.py  utils.py
src/tomtom_apis/automotive/: autostream.py  fuel_prices.py  models.py  parking_availability.py
src/tomtom_apis/maps/: map_display.py  models.py
src/tomtom_apis/places/: __init__.py  batch_search.py  ev_search.py  geocoding.py  models.py  premium_geocoding.py  reverse_geocoding.py  search.py
src/tomtom_apis/routing/: long_distance_ev_routing.py  matrix_routing_v2.py  models.py  routing.py  waypoint_optimization.py
src/tomtom_apis/tracking_logistics/: __init__.py  geofencing.py  location_history.py  models.py  notifications.py  snap_to_roads.py
src/tomtom_apis/traffic/: intermediate_traffic.py  junction_analytics.py  models.py  od_analytics.py  route_monitoring.py  traffic.py  traffic_stats.py
tests/: conftest.py  const.py  test_api.py  test_models.py  test_utils.py
tests/automotive/: test_autostream.py  test_fuel_prices.py  test_parking_availability.py
tests/fixtures/maps/: get_map_copyrights.txt  get_tile_v1.pbf  get_tile_v2.pbf
tests/fixtures/places/geocoding/: get_geocode.json  get_structured_geocode.json
tests/fixtures/places/reverse_geocoding/: get_cross_street_lookup.json  get_reverse_geocode.json
tests/fixtures/places/search/: get_autocomplete.json  get_category_search.json  get_geometry_filter.json  get_geometry_search.json  get_nearby_search.json  get_place_by_id.json  get_poi_categories.json  get_poi_search.json  get_search.json  post_geometry_filter.json  (+2 more)
tests/maps/: test_map_display.py
tests/places/: test_batch_search.py  test_ev_search.py  test_geocoding.py  test_models.py  test_premium_geocoding.py  test_reverse_geocoding.py  test_search.py
tests/routing/: test_long_distance_ev_routing.py  test_matrix_routing_v2.py  test_routing.py  test_waypoint_optimization.py
tests/tracking_logistics/: test_geofencing.py  test_location_history.py  test_notifications.py  test_snap_to_roads.py
tests/traffic/: test_intermediate_traffic.py  test_junction_analytics.py  test_od_analytics.py  test_route_monitoring.py  test_traffic.py  test_traffic_stats.py
(+12 files in other folders)
